--- a/public/projects.css
+++ b/public/projects.css
@@ -7,6 +7,8 @@
 
 .main-projects{
     background-color: var(--content_background);
+    display: flex;
+    flex-direction: column;
     min-height: 100vh;
 }
 
@@ -25,6 +27,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    flex: 1;
 }
 
 .projects>h1{
