--- a/public/navbar.css
+++ b/public/navbar.css
@@ -4,6 +4,7 @@
     font-family: 'Inter', sans-serif;
     font-family: 'Noto Sans', sans-serif;
     transition: all 0.25s ease-in-out;
+    font-size: 62.5%;
 }
 
 /* all variables for colors */
@@ -63,20 +64,20 @@
 }
 
 .list{
-    height: 110px;
+    height: 11rem;
     width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: var(--nabar_background);
-    gap: 70px;
+    gap: 7rem;
 }
 
 
 
 .item-link, .light-mode-button{
     color: var(--navbar_text);
-    font-size: 25px;
+    font-size: 2.5rem;
 }
 
 
@@ -93,7 +94,7 @@
     margin-left: auto;
     border-radius: 30%;
     border: none;
-    padding: 7px;
+    padding: .7rem;
     background-color: var(--theme_button);
     transition-duration: 0.6s;
 }
@@ -152,3 +153,27 @@
    .gg-sun::after {
     transform: rotate(45deg)
    } 
+
+   @media screen and (max-width: 56.25em) {
+    .item-link, .light-mode-button{
+        font-size: 2.35rem;
+    }
+    .light-mode-button{
+        margin: 0rem;
+    }
+    .list{
+        width: 66%;
+    }
+}
+
+@media screen and (max-width: 37.5em) {
+    .item-link, .light-mode-button{
+        font-size: 2rem;
+    }
+    .light-mode-button{
+        margin: 0rem;
+    }
+    .list{
+        width: 94%;
+    }
+}
